# cross-LVGL-demo

./: .gitignore  CMakeLists.txt  README.md  abc.c  arm.cmake  configure.sh  lv_conf.h  lv_drv_conf.h  main.c
UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
UI/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_rfidcontainer.c  ui_comp_rfidcontainer.h
UI/fonts/: ui_font_MiSans15.c  ui_font_MiSans18.c  ui_font_MiSans20.c
UI/screens/: ui_Login_Screen.c  ui_Login_Screen.h  ui_Main_Screen.c  ui_Main_Screen.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h
lv_drivers/: CMakeLists.txt
lvgl/env_support/cmake/: custom.cmake
